# starship

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Makefile  ORION_README.md  README.md  README.rst  codecov.yml  constraints.txt  dev-packages.txt  dev-requirements.txt  index.html  justfile  local.http  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.toml
.audit-ignore/: npm-audit-ignore.json  pip-audit-ignore.txt
.github/ISSUE_TEMPLATE/: bug.md  other.md
.github/workflows/: checks.yaml  checks.yml  deploy.yaml  main.yml  publish.yml  security-audit.yaml  test_publish.yml
.run/: build.run.xml  buildWatch.run.xml  dev.run.xml
api/: index.html
astro-migration-provider/: Makefile  README.md  README.rst  gha_retrieve_version.py  setup.cfg
astro-migration-provider/astronomer/aeroscope/: operators.py
astro-migration-provider/astronomer/migration/: operators.py
astro-migration-provider/astronomer/migration/connections/: operators.py
astro-migration-provider/astronomer/migration/env/: operators.py
astro-migration-provider/astronomer/migration/variables/: operators.py
astronomer-migration-provider/: Makefile  README.rst  setup.cfg
astronomer-migration-provider/astronomer/migration/: operators.py
astronomer-starship/: MANIFEST.in  Makefile  README.rst  gha_retrieve_version.py  setup.cfg
astronomer-starship-provider/: Makefile  README.rst  setup.cfg
astronomer-starship-provider/astronomer/starship/: operators.py
astronomer-starship-provider/astronomer/starship/connections/: operators.py
astronomer-starship/aeroscope/: operators.py
astronomer-starship/aeroscope/plugins/: __init__.py
astronomer-starship/starship/: main.py
astronomer-starship/starship/helpers/aws/: secrets_manager.py  systems_manager.py
astronomer-starship/starship/helpers/azure/: key_vault.py
astronomer-starship/starship/helpers/google/: secrets_manager.py
astronomer-starship/starship/services/: astro_client.py  local_airflow_client.py  local_client.py  migrate.py  remote_airflow_client.py
astronomer-starship/starship/services/aws/: secrets_manager.py  systems_manager.py
astronomer-starship/starship/services/azure/: key_vault.py
astronomer-starship/starship/services/google/: secrets_manager.py
astronomer-starship/starship/templates/: connections.html  dags.html  main.html  migration.html  variables.html
astronomer-starship/starship/templates/components/: dag_row.html  env_checkbox.html  github_loop.html  migrate_button.html  migrate_connection_button.html  target_deployment_select.html  test_connection_label.html  token_modal.html  user_label.html
astronomer-starship/starship/templates/starship/: connections.html  dags.html  env.html  migration.html  pools.html
astronomer-starship/starship/templates/starship/components/: dag_row.html  migrate_variable_button.html  tabs.html  tabs_loading.html  target_deployment_select.html  token_modal.html
astronomer-starship/tests/: conftest.py  e2e_test.py  validation_test.py
astronomer-starship/tests/starship/services/: astro_client_test.py  remote_airflow_client_test.py
astronomer/aeroscope/: operators.py
astronomer/aeroscope/plugins/: __init__.py  airflow_report.py
astronomer/orion/: __init__.py  __main__.py  astro.py  aws.py  az.py  gcp.py
astronomer/starship/: README.rst  main.py  operators.py
astronomer_starship/: .eslintrc.cjs  .prettierrc.cjs  __init__.py  common.py  compat.py  eslint.config.js  index.html  package-lock.json  package.json  plugins.py  prettierrc.js  starship.py  starship_api.py  vite.config.js
astronomer_starship/_af2/: __init__.py  cutover.py  starship.py  starship_api.py  starship_compatability.py
astronomer_starship/_af3/: __init__.py  starship.py  starship_api.py  starship_compatability.py
astronomer_starship/aeroscope/: operators.py  util.py
astronomer_starship/af2/: __init__.py  starship.py  starship_api.py
astronomer_starship/compat/: __init__.py  starship_compatability.py  starship_hook.py  starship_operator.py
astronomer_starship/cutover/: auth.py  service.py
astronomer_starship/src/: App.jsx  AppContext.jsx  State.jsx  constants.js  index.css  index.jsx  theme.js  util.js
astronomer_starship/starship/: main.py  operators.py
astronomer_starship/templates/: index.html
astronomer_starship/tests/: setup.js  test-utils.jsx
astronomer_starship/v2/: starship.py  starship_api.py
astronomer_starship/v3/: starship.py  starship_api.py
dev/: Dockerfile  Dockerfile.local  docker-compose.override.yml  justfile
dev/.astro/: config.yaml
dev/dags/: example.py  example_history.py  example_log.py  example_mapped.py  example_params.py  example_xcom.py  exampledag.py
dev2/: Dockerfile  Dockerfile.local  README.md  justfile
dev2/.astro/: config.yaml
dev2/dags/: example_history.py  example_retries.py  example_xcom.py  migration_dag.py  ui_testing_dag.py
dev3/: Dockerfile  Dockerfile.local  docker-compose.override.yml  justfile  requirements.txt
dev3/.astro/: config.yaml
dev3/dags/: example_history.py  example_log.py  example_mapped.py  example_retries.py
docs/: api.md  faq.md  index.md  operator.md
docs/migration_source/: gcc.md  mwaa.md
faq/: index.html
migration_source/gcc/: index.html
migration_source/mwaa/: index.html
operator/: index.html
search/: search_index.json
starship/: main.py
starship/services/: astrohub_client.py  local_client.py
starship/templates/: connections.html  dags.html  env.html  migration.html  variables.html
tests/: api_integration_test.py  conftest.py  cutover_test.py  e2e_test.py  operator_test.py  provider_consolidation_test.py  pytest.ini  source_connection_test.py  validation_test.py  validation_tests.py  wave_engine_test.py
tests/astronomer_starship/: starship_api_test.py
tests/docker_test/: README.md  dag.py  docker_test.py  run_container_test.sh  run_container_test_v2.sh  run_container_test_v3.sh
tests/e2e/: justfile
tests/e2e/mwaa/: mwaa.yaml
tests/resources/: requirements.txt
(+116 files in other folders)
