[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astronomer-starship"
dynamic = ["version"]
description = "Migrations to Astro"
authors = [
    { name = "Fritz Davenport", email = "fritz@astronomer.io" },
    { name = "CETA Team", email = "ceta@astronomer.io" },
    { name = "Astronomer", email = "humans@astronomer.io" },
]
readme = "README.md"
license = { text = "PROPRIETARY" }
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://astronomer.io"
Source = "https://github.com/astronomer/starship/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"astronomer_starship" = ["*.js", "*.html", "*.css"]
"astronomer_starship.static" = ["*.js", "*.html", "*.css"]
"astronomer_starship.static.assets" = ["*.js", "*.html", "*.css"]
"astronomer_starship.templates" = ["*.js", "*.html", "*.css"]

[tool.setuptools.dynamic]
version = { attr = "astronomer_starship.__version__" }

[tool.setuptools.packages.find]
include = ["astronomer_starship", "astronomer_starship.*"]
exclude = [
    "*venv*",
    "*venv*.*",
    "*tests.*",
    "*tests",
    "*build",
    "*build.*",
    "*dist",
    "*dist.*",
    "*node_modules",
    "*node_modules.*",
]

[project.optional-dependencies]
provider = [
    "apache-airflow-providers-http",
]

dev = [
    # package
    "twine",
    "build",

    # test
    "apache-airflow<3.2", # Starship only supports Airflow version up to 3.1 at the moment
    "pytest>=7",
    "pytest-cov>=4.0",
    "pytest-integration>=0.2",
    "pytest-sugar>=0.9",
    "docker>=6",

    # docs
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pygments",
]

[project.entry-points."airflow.plugins"]
"starship" = "astronomer_starship.starship:StarshipPlugin"
"starship_api" = "astronomer_starship.starship_api:StarshipAPIPlugin"

[project.entry-points.apache_airflow_provider]
provider_info = "astronomer_starship.__init__:get_provider_info"

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B301",
    "B403",
    "B310", # urlopen in Aeroscope
    "B608", # SQL Injection in DAG History Migration
]

[tool.ruff]
line-length = 120
target-version = "py37" # Ruff only support 3.7+ but should play nicely with 3.6; see https://github.com/astral-sh/ruff/issues/3826

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "C90", # Complexity
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "tests/docker_test/",
    "tests/resources/",
    "__pycache__",
]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--no-header",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]
