[metadata]
name = starship
version = 0.1.5
description = Migrations to Astro Cloud
author = Philippe Gagnon


[options]
include_package_data = True
python_requires = >=3.7, <4
install_requires =
  python-graphql-client
  requests
  cachetools

[options.entry_points]
airflow.plugins =
  starship = starship.main:StarshipPlugin
