[metadata]
name = astronomer-starship
version = 0.3.3
description = Migrations to Astro Cloud
author = ade@astronomer.io
long_description = file: README.rst
url = https://github.com/astronomer/starship
project_urls =
  Source Code=https://github.com/astronomer/starship
  Homepage=https://astronomer.io


[options]
include_package_data = True
python_requires = >=3.7, <4
packages = find_namespace:
install_requires =
  pydash
  python-graphql-client
  requests
  cachetools
  pygithub

[options.entry_points]
airflow.plugins =
  starship = astronomer.starship.main:StarshipPlugin
  starship_aeroscope = astronomer.aeroscope.plugins:AeroscopePlugin

[options.packages.find]
include =
    astronomer.*
