[metadata]
name = astronomer-migration-provider
version = 0.1.5
url = https://github.com/astronomer/starship/astro-migration-provider
description = Migration operators to assist moving variables, connections to Astronomer Cloud
author = Chris Hronek
long_description = file: README.rst
project_urls =
  Source Code=https://github.com/astronomer/starship/astro-migration-provider
  Homepage=https://astronomer.io

[options]
packages = find_namespace:
include_package_data = true
namespace_packages = astronomer,astronomer.migration
python_requires = >=3.7, <4
install_requires =
  python-graphql-client
  requests  

[options.packages.find]
include =
    astronomer.*

