[metadata]
name = astronomer-starship-provider
version = 0.1.3
url = https://github.com/astronomer/starship/astronomer-starship-provider
description = Migration operators to assist moving variables, connections to Astronomer Cloud
author = Astronomer CSE Team
long_description = file: README.rst
project_urls =
  Source Code=https://github.com/astronomer/starship/astronomer-starship-provider
  Homepage=https://astronomer.io

[options]
packages = find_namespace:
include_package_data = true
namespace_packages = astronomer,astronomer.starship
python_requires = >=3.7, <4
install_requires =
  python-graphql-client
  requests  

[options.packages.find]
include =
    astronomer.*

