[metadata]
name = astronomer-starship
version = 0.3.0
description = Migrations to Astro Cloud
author = ade@astronomer.io
long_description = file: README.rst


[options]
include_package_data = True
python_requires = >=3.7, <4
packages = find_namespace:
install_requires =
  pydash
  python-graphql-client
  requests
  cachetools
  pygithub

[options.entry_points]
airflow.plugins =
  starship = starship.main:StarshipPlugin
  starship_aeroscope = aeroscope.plugins:AeroscopePlugin